<resources>
    <string name="app_name">WanAndroid</string>

    <!--登陆页面-->
    <string name="login_username_placeholder">请输入用户名</string>
    <string name="login_password_placeholder">请输入密码</string>
    <string name="login_login_btn_text">登陆</string>
    <string name="login_reg_btn_text">没有账号?快注册一个</string>

    <!--注册页面-->
    <string name="reg_username_placeholder">邮箱/手机号</string>
    <string name="reg_password_placeholder">6–50位密码</string>
    <string name="reg_repassword_placeholder">确认密码</string>
    <string name="reg_reg_btn_text">注册</string>

    <!--侧边栏-->
    <string name="nav_header_username_default">UserName@email.com</string>

    <!--首页-->
    <string name="home_page_icon_home">首页</string>
    <string name="home_page_icon_project">项目</string>
    <string name="home_page_icon_knowledge">知识</string>
    <string name="home_page_icon_gzh">公众号</string>

    <!--搜索页-->
    <string name="search_hot_title">热搜</string>
    <string name="search_history">历史搜索</string>
    <string name="search_clear_history">清空历史</string>

    <!--设置页-->
    <string name="setting_cache_label">清理缓存</string>
    <string name="setting_no_img_label">无图模式</string>
    <string name="setting_change_theme">检查更新</string>

    <!--关于我们-->
    <string name="about_us_text_1"><![CDATA[
        <h2>网站内容</h2>
        <p>\t\t本网站每天新增20~30篇优质文章，并加入到现有分类中，力求整理出一份优质而又详尽的知识体系，闲暇时间不妨上来学习下知识；除此以外，并为大家提供平时开发过程中常用的工具以及常用的网址导航。</p>
        <p>\t\t当然这只是我们目前的功能，未来我们将提供更多更加便捷的功能…</p>
        <p>\t\t如果您有任何好的建议：</p>
            \t\t\t\t关于网站排版
            <br/>\t\t\t\t关于新增常用网址以及工具
            <br/>\t\t\t\t未来你希望增加的功能等
        <p>\t\t可以在 <a href="https://github.com/hongyangAndroid/wanandroid" target="_blank">https://github.com/hongyangAndroid/xueandroid</a> 项目中以issue的形式提出，我将及时跟进。</p>
        <p>\t\t如果您希望长期关注本站，可以加入我们的QQ群：<b>591683946</b></p>
        <h2>源码位置</h2>
        <p>\t\t本软件开源，如果你发现任何错误，不要犹豫，马上点击<a href="https://github.com/d745282469/WanAndroid" target="_blank">GitHub</a>，在上面发起<b>issue</b>或者提交<b>pull request</b>。</p>
        <h2>参考源码</h2>
        <p>\t\t<a href="https://github.com/arvinljw/WanAndroid" target="_blank">WanAndroid练手项目—arvinljw</a></p>
        <p>\t\t<a href="https://github.com/JsonChao/Awesome-WanAndroid" target="_blank">Awesome-WanAndroid—JsonChao</a></p>
        <h2>使用到的开源库</h2>
        <p>\t\t<a href="https://github.com/hongyangAndroid/okhttputils" target="_blank">okhttputils—hongyangAndroid</a></p>
        <p>\t\t<a href="https://github.com/google/gson" target="_blank">gson—google</a></p>
        <p>\t\t<a href="https://github.com/bumptech/glide" target="_blank">glide—bumptech</a></p>
        <p>\t\t<a href="https://github.com/hdodenhof/CircleImageView" target="_blank">CircleImageView—hdodenhof</a></p>
        <p>\t\t<a href="https://github.com/bingoogolapple/BGAPhotoPicker-Android" target="_blank">BGAPhotoPicker-Android—bingoogolapple</a></p>
    ]]></string>

    <!--收藏页-->
    <string name="collect_add_collect">添加收藏</string>
    <string name="collect_sure_collect">添加</string>
    <string name="collect_cancel_collect">取消</string>
    <string name="collect_add_title">标题</string>
    <string name="collect_add_author">作者</string>
    <string name="collect_add_link">链接</string>
</resources>
