<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/page_padding"
        android:paddingBottom="@dimen/page_padding"
        android:text="@string/collect_add_collect"
        android:textColor="@color/page_text_normal"
        android:textSize="@dimen/page_toolbar_title_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/page_padding"
        android:paddingRight="@dimen/page_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/collect_add_title"
            android:textColor="@color/page_text_gray"
            android:textSize="@dimen/page_text_size_normal"
            android:gravity="center"/>

        <EditText
            android:id="@+id/et_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/tv_border_rect_gray"
            android:maxLines="1"
            android:textColor="@color/page_text_normal"
            android:textSize="@dimen/page_text_size_normal"
            android:padding="5dp"
            android:hint="@string/collect_add_title"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/page_line_margin"
        android:layout_marginBottom="@dimen/page_line_margin"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/page_padding"
        android:paddingRight="@dimen/page_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/collect_add_author"
            android:textColor="@color/page_text_gray"
            android:textSize="@dimen/page_text_size_normal"
            android:gravity="center"/>

        <EditText
            android:id="@+id/et_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/tv_border_rect_gray"
            android:maxLines="1"
            android:textColor="@color/page_text_normal"
            android:textSize="@dimen/page_text_size_normal"
            android:padding="5dp"
            android:hint="@string/collect_add_author"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/page_padding"
        android:paddingRight="@dimen/page_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/collect_add_link"
            android:textColor="@color/page_text_gray"
            android:textSize="@dimen/page_text_size_normal"
            android:gravity="center"/>

        <EditText
            android:id="@+id/et_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@drawable/tv_border_rect_gray"
            android:maxLines="1"
            android:textColor="@color/page_text_normal"
            android:textSize="@dimen/page_text_size_normal"
            android:padding="5dp"
            android:hint="@string/collect_add_link"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/page_line"
        android:layout_marginTop="@dimen/page_line_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/collect_cancel_collect"
            android:textSize="@dimen/page_btn_size"
            android:textColor="@color/page_text_gray"
            android:paddingTop="@dimen/page_padding"
            android:paddingBottom="@dimen/page_padding"
            android:gravity="center"
            android:background="@drawable/page_select_result"
            android:clickable="true"/>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:background="@color/page_line"/>

        <TextView
            android:id="@+id/btn_sure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/collect_sure_collect"
            android:textSize="@dimen/page_btn_size"
            android:paddingTop="@dimen/page_padding"
            android:paddingBottom="@dimen/page_padding"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/page_select_result"
            android:clickable="true"/>

    </LinearLayout>

</LinearLayout>