<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.SearchActivity">

    <com.example.wanandroid.CustomView.InputBar
        android:id="@+id/inputBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/page_padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_hot_title"
            android:textColor="@color/page_text_normal"
            android:textSize="@dimen/page_toolbar_title_text_size" />

        <android.support.design.internal.FlowLayout
            android:id="@+id/fl_hot_key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/page_padding" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/page_padding"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/search_history"
                android:textColor="@color/page_text_normal"
                android:textSize="@dimen/page_toolbar_title_text_size" />

            <TextView
                android:id="@+id/tv_clear_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search_clear_history"
                android:textColor="@color/page_text_gray"
                android:textSize="@dimen/page_text_size_normal" />

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_search_history"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>