<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity"
    android:orientation="vertical"
    android:id="@+id/drawerLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--标题栏-->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:paddingLeft="@dimen/page_padding"
            android:paddingRight="@dimen/page_padding"
            android:paddingStart="0dp"
            android:paddingEnd="0dp">

            <LinearLayout
                android:id="@+id/ll_bar_slide"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@drawable/page_select_result"
                android:clickable="true">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/page_toolbar_more"
                    />
            </LinearLayout>



            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:layout_weight="1"
                android:textSize="@dimen/page_toolbar_title_text_size"
                android:textColor="@color/page_toolbar_text"
                android:gravity="center"
                />

            <LinearLayout
                android:id="@+id/ll_bar_search"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:background="@drawable/page_select_result"
                android:clickable="true">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/page_toolbar_search"
                    />

            </LinearLayout>

        </LinearLayout>

        <!--内容区域-->
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <FrameLayout
                android:id="@+id/fl_content"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/page_background_color"/>

            <View
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="0.7dp"
                android:background="@color/page_line"/>

            <android.support.design.widget.BottomNavigationView
                android:id="@+id/bottom_nav"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                app:itemBackground="@null"
                app:itemIconTint="@drawable/bottom_nav_selector"
                app:itemTextColor="@drawable/bottom_nav_selector"
                app:menu="@menu/bottom_nav_menu"
                />

            <LinearLayout
                android:visibility="gone"
                android:id="@+id/ll_tab_bar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:background="#ffffff"
                >

                <LinearLayout
                    android:id="@+id/ll_btn_home"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/iv_icon_home"
                        android:layout_width="@dimen/main_bottom_icon_width"
                        android:layout_height="@dimen/main_bottom_icon_width"
                        android:background="@drawable/home_home_icon"/>

                    <TextView
                        android:id="@+id/tv_text_home"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_page_icon_home"
                        android:textSize="@dimen/page_text_size_normal"
                        android:layout_marginTop="2dp"
                        android:textColor="@color/colorPrimary"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_btn_project"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/iv_icon_project"
                        android:layout_width="@dimen/main_bottom_icon_width"
                        android:layout_height="@dimen/main_bottom_icon_width"
                        android:background="@drawable/home_project_icon_def"/>

                    <TextView
                        android:id="@+id/tv_text_project"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_page_icon_project"
                        android:textSize="@dimen/page_text_size_normal"
                        android:layout_marginTop="2dp"
                        android:textColor="@color/page_text_gray"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_btn_knowledge"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/iv_icon_knowledge"
                        android:layout_width="@dimen/main_bottom_icon_width"
                        android:layout_height="@dimen/main_bottom_icon_width"
                        android:background="@drawable/home_knowledge_icon_def"/>

                    <TextView
                        android:id="@+id/tv_text_knowledge"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_page_icon_knowledge"
                        android:textSize="@dimen/page_text_size_normal"
                        android:layout_marginTop="2dp"
                        android:textColor="@color/page_text_gray"
                        />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_btn_gzh"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/iv_icon_gzh"
                        android:layout_width="@dimen/main_bottom_icon_width"
                        android:layout_height="@dimen/main_bottom_icon_width"
                        android:background="@drawable/home_gzh_icon_def"/>

                    <TextView
                        android:id="@+id/tv_text_gzh"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home_page_icon_gzh"
                        android:textSize="@dimen/page_text_size_normal"
                        android:layout_marginTop="2dp"
                        android:textColor="@color/page_text_gray"
                        />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        app:menu="@menu/nav_menu"
        app:headerLayout="@layout/nav_header"/>

</android.support.v4.widget.DrawerLayout>